--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="cz">
 
 <head>
     <!-- Required meta tags -->
@@ -80,7 +80,7 @@
                         commodo consequat. Phasellus et lorem id felis nonummy placerat.</p><br>
                     <p>In enim a arcu imperdiet malesuada. Proin in tellus sit amet nibh dignissim sagittis.</p>
                     <div class="kontakt-btn">
-                        <a href="" class="text-uppercase">kontaktuj mě</a>
+                        <a href="#contact" class="text-uppercase">kontaktuj mě</a>
                     </div>
                 </div>
                 <div class="col-6 text-center">
@@ -103,12 +103,12 @@
                     <p>In enim a arcu imperdiet malesuada. Proin in tellus sit amet nibh dignissim sagittis.</p>
                 </div>
                 <div class="card my-5 text-center d-flex justify-content-center col-lg-4 col-md-12 col-sm-12">
-                    <img src="img/badge.png" alt="">
+                    <img src="img/dumbbell.png" alt="">
                     <h5>NADPIS</h5>
                     <p>In enim a arcu imperdiet malesuada. Proin in tellus sit amet nibh dignissim sagittis.</p>
                 </div>
                 <div class="card my-5 text-center d-flex justify-content-center col-lg-4 col-md-12 col-sm-12">
-                    <img src="img/badge.png" alt="">
+                    <img src="img/handshake.png" alt="">
                     <h5>NADPIS</h5>
                     <p>In enim a arcu imperdiet malesuada. Proin in tellus sit amet nibh dignissim sagittis.</p>
                 </div>
@@ -120,7 +120,7 @@
         <div class="container-fluid my-4">
             <div class="row d-flex justify-content-evenly">
                 <div class="card my-5 text-center d-flex justify-content-center col-lg-4 col-md-12 col-sm-12">
-                    <img src="img/badge.png" alt="">
+                    <img src="img/handshake.png" alt="">
                     <h5>NADPIS</h5>
                     <p>In enim a arcu imperdiet malesuada. Proin in tellus sit amet nibh dignissim sagittis.</p>
                 </div>
@@ -130,7 +130,7 @@
                     <p>In enim a arcu imperdiet malesuada. Proin in tellus sit amet nibh dignissim sagittis.</p>
                 </div>
                 <div class="card my-5 text-center d-flex justify-content-center col-lg-4 col-md-12 col-sm-12">
-                    <img src="img/badge.png" alt="">
+                    <img src="img/dumbbell.png" alt="">
                     <h5>NADPIS</h5>
                     <p>In enim a arcu imperdiet malesuada. Proin in tellus sit amet nibh dignissim sagittis.</p>
                 </div>
